Include the bin scripts in vendor/bin folder
The bin scripts will also be placed in the vendor/bin folder.

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "config": {
         "bin-dir": "bin"
     },
+    "bin": ["bin/zf.sh", "bin/zf.php"],
     "extra": {
         "branch-alias": {
             "dev-trunk": "1.12.x-dev",
