Added ZendX to include path. Closes #2.

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         }
     },
     "include-path": [
-        "library/"
+        "library/",
+        "extras/library/"
     ],
     "config": {
         "bin-dir": "bin"
